[tool.poetry]
name = "qosst-sim"
version = "0.10.0"
description = "Simulation module of QOSST."
authors = [
    "Mayeul Chavanne <mayeul.chavanne@ensta-paris.fr>",
    "Yoann Piétri <Yoann.Pietri@lip6.fr>",
]
packages = [{ include = "qosst_sim" }, { include = "qosst_sim/py.typed" }]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/qosst"
repository = "https://github.com/qosst/qosst-sim"
documentation = "https://qosst-sim.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
qosst-core = "^0.10.0"
qosst-skr = "^0.10.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
docstr-coverage = "^2.2.0"
myst-parser = "^1.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
matplotlib = [
    { version = "^3.5.1", python = ">=3.7, <3.11" },
    { version = "^3.7.1", python = ">=3.11, <3.12" },
]
sphinx-prompt = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
